--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -27,11 +27,11 @@
                                             {{ csrfField() }}
                                             <div class="form-group">
                                                 <label class="small mb-1" for="inputEmailAddress">Email</label>
-                                                <input class="form-control py-4" value="arroyocolton@gmail.com" name="email" id="inputEmailAddress" type="email" placeholder="Enter email address" />
+                                                <input class="form-control py-4" value="" name="email" id="inputEmailAddress" type="email" placeholder="Enter email address" />
                                             </div>
                                             <div class="form-group">
                                                 <label class="small mb-1" for="inputPassword">Password</label>
-                                                <input class="form-control py-4" value="fmiller" name="password" id="inputPassword" type="password" placeholder="Enter password" />
+                                                <input class="form-control py-4" value="" name="password" id="inputPassword" type="password" placeholder="Enter password" />
                                             </div>
                                             <div class="form-group">
                                                 <div class="custom-control custom-checkbox">
